--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-chartjs": "^3.5.1",
     "vue-excel-export": "^0.1.3",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.3",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
