--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3tmmo-web",
+  "name": "3tmmo-statistic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
+    "v-calendar": "^2.4.1",
     "vee-validate": "^4.5.4",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
