--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vee-validate/rules": "^4.5.3",
     "axios": "^0.24.0",
+    "axios-middleware": "^0.3.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
